chagen video streaming exercise to optional

--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -428,10 +428,12 @@ Router(interface)# ip multicast ttl-threshold 32
     \end{report}
 
 \part{Multicast Video Streaming Exercise}
+    This is an optional exercise on video streaming in multicast network.
+    This exercise use many resource in GNS3 simulator.
     In the following exercise, we use \lstinline{vlc} for video streaming.
     The routers and hosts have the same configurations as in \hyperref[fig:7.14]{Figure~7.14}.
 
-\section{Multicast Real-Time Video}
+\section{**Multicast Real-Time Video}
     Start \lstinline{vlc} on all the hosts, by using \lstinline{vlc &}.
 
     On \textit{h0}, go to the \lstinline{vlc} menu: \textit{Media/Stream\ldots }.
