update tcp window scale footnote

--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -143,7 +143,7 @@ ifconfig eth0 up
     
     \item Describe how the retransmission timer changes after sending each retransmitted packet, during the period when the cable was disconnected.
     
-    \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.\footnote{\href{http://www.ccs-labs.org/teaching/rn/animations/gbn_sr/}{TCP Window visualizer}}.
+    \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.\footnote{Can see TCP \textbf{window scale} option and \textbf{RTT}}.
     \end{report}
     
 \part{Other Exercises}
