--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -218,7 +218,7 @@ tcpdump -x -s 100 -c 4 udp port 520
     \item Draw the format of one of the saved RIP response packets from your sub-net, including the IP and UDP headers and the RIP message (see Figs 0.13, 0.14, and 4.4).
     Identify each field, and express their values in decimal format.
     
-    \item For the other seven RIP response packets collected, explain the contents of the RIP messages only, excluding IP and UDP headers.
+    \item According to the other RIP response packets collected, explain the contents of the RIP messages only, excluding IP and UDP headers.
 
     
     \item Draw the distance tables and the routing tables in the routers based on \hyperref[fig:4.11]{Figure~4.11}, assuming that number of hops is used as the metric.
