chapter 8: add footnote for apache config

--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -23,7 +23,7 @@
     \item How many \lstinline{apache2} processes were started?
     Which one was the master server, and which ones were the child servers? (\textit{use \lstinline{htop} and switch to \textbf{tree} to see process hierarchy})
     Justify your answer using the \textbf{apache2} configurations file.
-    Explain your answer with value of \textit{Startservers, MinSpareServers, MaxSpareServers, MaxRequestWorkers, ServerLimit, MaxconnectionsPerChild}
+    Explain your answer with value of \textit{Startservers, MinSpareServers, MaxSpareServers, MaxRequestWorkers, ServerLimit, MaxconnectionsPerChild}\footnote{Need to read \textit{Apache} web documents}.
     
     \item What is the purpose of initiating multiple apache2 processes?
     \end{report}
