--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -236,11 +236,11 @@ host h5 {
     Display the manual page of \lstinline{date}, and study its options and usages.
     Try the following \lstinline{date} commands: 
 
-    \begin{lstlisting}[emph={file-name}]
+    \begin{lstlisting}[emph={$file-name}]
 date --date='2 days ago'
 date --date='3 months 2 days'
 date --set='+3 minutes'
-date -r file-name
+date -r $file-name
     \end{lstlisting}
     You can choose any file in the current directory for the \textit{file-name} parameter.
     
