--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -89,7 +89,7 @@ rocommunity guest
     \item What is the community name used in this lab? What is the use of the
     community name?
     
-    \item What is the data type for the MIB object \texttt{ifMtu.\textit{x}}\footnote{$1$ for \textit{loopback}, otherwise it point to other \textit{interfaces}} ($x \in \{2,3,4,\cdots\}$)? What is the definition of the MIB object \texttt{ifPhysAddress} and \texttt{ifInOctets}?
+    \item What is the data type for the MIB object \texttt{ifMtu.\textit{x}} ($x=1$ for \textit{loopback} and $x \in \{2,3,4,\cdots\}$ for other interfaces)? What is the definition of the MIB object \texttt{ifPhysAddress} and \texttt{ifInOctets}?
     
     \item What is the data type and definition of \texttt{tcpRtoAlgorithm}? What values are allowed for \texttt{tcpRtoAlgorithm}? What is the definition of \texttt{tcpMaxConn}?
     \end{report}
