--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -408,27 +408,18 @@ Router(config-router)# network address wildcard-mask area area-id
 tcpdump -x -s 120 ip proto 89
     \end{lstlisting}
 
-    Login to a directly connected router and start the OSPF process.
+    Login to each router and start the OSPF process (configure OSPF process from \autoref{sec:ospf}).
     Set the argument \textit{area-id} to 1 for all the routers.
 
     % The hosts in our lab run \lstinline{routed} (which uses RIP).
     % The routing daemon supporting OSPF, \lstinline{gated}, is not installed.
     In order to reach the routers and hosts in the other subnets, you need to add a default router in your host’s routing table.
 
-    Examine the routing table in each router (see Section~4.3 of reference book.).
+    Examine the routing table in each router (\lstinline[language={cisco}]{sh ip route})\footnote{see Section~4.3 of reference book.}.
     When the routing table gets an entry for the network that is not directly connected, kill the \lstinline{tcpdump} process and save the \lstinline{tcpdump} output.
 
     Collect the \lstinline{tcpdump} outputs from other subnets.
     Study the various types of OSPF packets from the \lstinline{tcpdump} outputs.
-
-    You can display OSPF information in a router using the following commands in the \textit{Privileged EXEC} mode.
-    \begin{lstlisting}[language={cisco}]
-show ip ospf
-show ip ospf database [router|network|summary|asb-summary|external|database-summary]
-show ip ospf interface ethernet [0|1]
-show ip ospf neighbor
-show ip ospf virtual-links
-    \end{lstlisting}
     
     \begin{report}
         \item Draw the common header of a saved OSPF message, giving the decimal values of the header fields (see \hyperref[fig:4.8]{Figure~4.8}).
@@ -451,13 +442,14 @@ show ip ospf virtual-links
     Save the routing table of the other router if you have one more router connected directly.
     In this case, copy the initial routing table of these routers from students in other subnets later.
 
-    Now configure the routing table in each router.
+    Now configure the routing table in each router in \textit{Global Configuration} mode.
     See Section 4.3 for commands and syntax on manipulating router routing tables.
     Note that each router should be configured by one person only.
 
-    \begin{lstlisting}[language={cisco}, emph={network, net-mask, next-hup}]
-ip route network net-mask next-hup
-! ip route 192.168.1.0 255.255.255.0 192.168.2.1
+    \begin{lstlisting}[language={cisco}, emph={destination-network, destination-net-mask, next-hup-ip}]
+ip route destination-network destination-net-mask next-hup-ip
+! for example on R4
+! ip route 128.238.63.0 255.255.255.0 128.238.64.3
     \end{lstlisting}
 
     Use \lstinline{ping} to test the connections.
@@ -483,4 +475,18 @@ ip route network net-mask next-hup
         \item From the \lstinline{tcpdump} output, explain how the multi-hop route was found.
     Explain the sequence of the ICMP messages used.
     \end{report}
+
+\newpage
+\appendix
+
+\section{OSPF information}
+    You can display OSPF information in a router using the following commands in the \textit{Privileged EXEC} mode.
+    \begin{lstlisting}[language={cisco}]
+show ip ospf
+show ip route
+show ip ospf database [router|network|summary|asb-summary|external|database-summary]
+show ip ospf interface ethernet [0|1]
+show ip ospf neighbor
+show ip ospf virtual-links
+    \end{lstlisting}
 \end{document}
