--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -125,12 +125,12 @@ netstat -g
     \end{report}
 
 \section{Multicast \texttt{ping}}
-    Set hosts \textit{h0}, \textit{h2}, \textit{h4} and \textit{h6} to replry linux multicast routing in all the hosts:
-    \begin{lstlisting}[emph={eth0}]
-echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
-    \end{lstlisting}
+%     Set all hosts \textit{h0}, \textit{h2}, \textit{h4} and \textit{h6} to replry linux multicast routing in all the hosts:
+%     \begin{lstlisting}[emph={eth0}]
+% echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
+%     \end{lstlisting}
 
-    Execute following command on \textit{h1}:
+    Execute following command on \textit{h0}:
     \begin{lstlisting}
 ping 224.0.0.1
     \end{lstlisting}
@@ -156,7 +156,7 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
             Which hosts replied when the broadcast address was pinged?
             Verify you answers with hosts config \path{/proc/sys/net/ipv4/icmp_echo_ignore_broadcasts}.
 
-        \item In each case, was there a reply from \textit{h0} and \textit{h1}?
+        \item In each case, was there a reply from \textit{h0}?
     \end{report}
 
 \section{Multicast vs Unicast\label{sec:multicast-vs-unicast}}
@@ -179,7 +179,11 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
 socket -i -u -n1 230.11.111.10 2000
     \end{lstlisting}
 
-    Generate another Ethernet multicast frame, but with a different group address of {232.139.111.10}.
+    Generate another Ethernet multicast frame, but with a different group address of {232.139.111.10}, e.g.:
+    \begin{lstlisting}[emph={your-host, remote-host}]
+socket -i -u -n1 230.139.111.10 2000
+    \end{lstlisting}
+
 
     To generate an Ethernet broadcast frame, you may \lstinline{ping} a remote host from \textit{h0} that has no entry in the ARP table of your host, e.g.\ \textit{h5}.
     \footnote{You can see ARP table by \lstinline{arp -a} delete a cached ARP entry by \lstinline[emph={ip}]{arp -d ip}.}
@@ -257,7 +261,7 @@ ping 224.111.111.111
     \end{lstlisting}
     Examine the \lstinline{tcpdump} and \lstinline{ping} outputs to see which hosts replied.
 
-    Terminate the \lstinline{netspy} programs on several hosts, e.g.\ \textit{h0} and \textit{h6}.
+    Terminate the \lstinline{netspy} client programs on several hosts, e.g.\ \textit{h0} and \textit{h6}.
     Execute the \lstinline{ping} command again.
 
     Also, examine the \lstinline{tcpdump} and the \lstinline{ping} outputs (on \textit{h6}) to see which hosts replied.
@@ -328,20 +332,24 @@ ping -b 128.238.66.255
         \label{fig:7.13}
     \end{figure}
 
-    Enable linux multicast routing in all the hosts (see \autoref{sec:simple-multicast}):
-    \begin{lstlisting}[emph={eth0}]
-route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
-route add -net 128.238.0.0/16 dev eth0
-echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
-    \end{lstlisting}
+%     Enable linux multicast routing in all the hosts (see \autoref{sec:simple-multicast}):
+%     \begin{lstlisting}[emph={eth0}]
+% route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
+% route add -net 128.238.0.0/16 dev eth0
+% echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
+%     \end{lstlisting}
 
     You can use prepared topology as described in \autoref{sec:simple-multicast}.
 
 \section{Configuring Router}
 \label{sec:config-router}
     Connect the hosts and the route in your group as shown in \hyperref[fig:7.13]{Figure~7.13}.
-    Set the IP address of your host as given in \hyperref[tab:7.2]{Table~7.2}.
+    % Set the IP address of your host as given in \hyperref[tab:7.2]{Table~7.2}.
     % Note that the IP addresses of the router interfaces are the same as their default IP addresses.
+    % ip address 128.238.63.3 255.255.255.0
+    % ip address 128.238.64.3 255.255.255.0
+    % no shutdown
+    
     Run \lstinline{ip multicast-routing} to enable multicast routing in the \textit{Global Configuration} mode.
     Then, enable the PIM protocol on each interface, by running \lstinline{ip pim dense-mode} in the \textit{Interface Configuration} mode.
     Now the router is enabled to do multicast routing using PIM.
@@ -349,14 +357,10 @@ echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
 configure terminal
     ip multicast-routing
     interface f0/0
-        ip address 128.238.63.3 255.255.255.0
         ip pim dense-mode
-        no shutdown
         exit
     interface f0/1
-        ip address 128.238.64.3 255.255.255.0
         ip pim dense-mode
-        no shutdown
         exit
     end
     \end{lstlisting}
@@ -373,11 +377,11 @@ show ip igmp group
 
 \section{Multicast Message}
     Enable linux multicast routing in all the hosts (see \autoref{sec:linux-multicast-routing}).\\
-    Start \lstinline{netspy} on all the hosts, by using:
+    Start \lstinline{netspy} client on all the hosts, by using:
     \begin{lstlisting}
 /home/netlab/code/netspy 224.111.111.111 1500
     \end{lstlisting}
-    Start \lstinline{netspy} on \textit{h1}, by using:
+    Start \lstinline{netspy} server on \textit{h1}, by using:
     \begin{lstlisting}
 /home/netlab/code/netspyd 224.111.111.111 1500 16
     \end{lstlisting}
@@ -389,7 +393,7 @@ show ip igmp interface
 show ip igmp group
     \end{lstlisting}
 
-    Can you \lstinline{ping} a host on the other side of the router (e.g.\ \lstinline{ping} \textit{h4} from \textit{h1})? If not, why not?
+    Can you \lstinline{ping} a host on the other side of the router (e.g.\ \lstinline{ping} \textit{h4} from \textit{h1})?
     \begin{lstlisting}
 ping 128.238.64.104
     \end{lstlisting}
@@ -398,15 +402,16 @@ ping 128.238.64.104
     \begin{lstlisting}
 telnet 128.238.63.101
     \end{lstlisting}
-    Do multicast messages sent by \lstinline{netspyd} reach the other side of the router? If not, why not?
+    Do multicast messages sent by \lstinline{netspyd} reach the other side of the router?
 
-    Add \textit{route} for \textbf{other subnet} to your host and try \lstinline{ping} again:
-    \begin{lstlisting}[emph={eth0}]
-route add -net 128.238.64.0/24 dev eth0  # on h1 & h2
-route add -net 128.238.63.0/24 dev eth0  # on h3 & h4
-    \end{lstlisting}
-    Now, login to \textit{h1} from \textit{h2} in your group via \lstinline{telnet}, then logout.
-    Check if multicast messages sent by \lstinline{netspyd} reach the other side of the router.
+% Default route has been already added in topology
+%     Add \textit{route} for \textbf{other subnet} to your host and try \lstinline{ping} again:
+%     \begin{lstlisting}[emph={eth0}]
+% route add -net 128.238.64.0/24 dev eth0  # on h1 & h2
+% route add -net 128.238.63.0/24 dev eth0  # on h3 & h4
+%     \end{lstlisting}
+%     Now, login to \textit{h1} from \textit{h2} in your group via \lstinline{telnet}, then logout.
+    % Check if multicast messages sent by \lstinline{netspyd} reach the other side of the router.
     
     \begin{report}
         \item Can you ping a host on the other side of the router?
@@ -419,7 +424,7 @@ route add -net 128.238.63.0/24 dev eth0  # on h3 & h4
     \begin{lstlisting}[emph={eth0}]
 tcpdump ip multicast -v
     \end{lstlisting}
-    When you see \textbf{three or more IGMP queries} in the second \lstinline{tcpdump} output, terminate both \lstinline{tcpdump} programs.
+    When you see \textbf{three or more IGMP queries} in the \lstinline{tcpdump} output, terminate \lstinline{tcpdump} program.
 
     Analyze the IGMP messages you captured.
     Print and save two different IGMP messages.
@@ -454,6 +459,7 @@ configure terminal
 \part{Multicast Routing Exercises}\label{sec:multicast-routing}
     For the rest of the exercises in this chapter, the network topology is given in \hyperref[fig:7.14]{Figure~7.14}.
     The IP addresses of the hosts and router interfaces are given in \hyperref[fig:7.14]{Figure~7.14}.
+    Enable linux multicast routing in all the hosts and routers if needed.
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}
@@ -524,33 +530,35 @@ configure terminal
     \end{figure}
 
     You can use prepared topology as described in \autoref{sec:simple-multicast}.
+    Wait until OSPF creates routing tables, so that hosts can reach each other.
+
+%     Enable linux multicast routing in all the hosts (see \autoref{sec:simple-multicast}):
+%     \begin{lstlisting}[emph={eth0}]
+% route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
+% route add -net 128.238.0.0/16 dev eth0
+% echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
+%     \end{lstlisting}
+
+%     Enable PIM multicast routing in all the routers (see \autoref{sec:config-router}). 
+%     \begin{lstlisting}[language={cisco}, emph={ethernet0_ip, ethernet1_ip}]
+% configure terminal
+%     ip multicast-routing
+%     interface f0/0
+%         ip address ethernet0_ip 255.255.255.0
+%         ip pim dense-mode
+%         no shutdown
+%         exit
+%     interface f0/1
+%         ip address ethernet1_ip 255.255.255.0
+%         ip pim dense-mode
+%         no shutdown
+%         exit
+%     end
+%     \end{lstlisting}
 
 \section{Multicast Multi-Hub\label{sec:multi-hub}}
-    Enable linux multicast routing in all the hosts (see \autoref{sec:simple-multicast}):
-    \begin{lstlisting}[emph={eth0}]
-route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
-route add -net 128.238.0.0/16 dev eth0
-echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
-    \end{lstlisting}
 
-    Enable PIM multicast routing in all the routers (see \autoref{sec:config-router}). 
-    \begin{lstlisting}[language={cisco}, emph={ethernet0_ip, ethernet1_ip}]
-configure terminal
-    ip multicast-routing
-    interface f0/0
-        ip address ethernet0_ip 255.255.255.0
-        ip pim dense-mode
-        no shutdown
-        exit
-    interface f0/1
-        ip address ethernet1_ip 255.255.255.0
-        ip pim dense-mode
-        no shutdown
-        exit
-    end
-    \end{lstlisting}
-
-    Run \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on all the hosts. 
+    Run \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on \textit{h6}. 
 
     Execute \lstinline{netspy} client on \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and \textit{h6}:
     \begin{lstlisting}
@@ -576,10 +584,10 @@ telnet 128.238.63.101
     
     \begin{report}
     \item While the \lstinline{netspy} program is running on \textit{h6},
-    can you see the \lstinline{netspy} messages on the 128.238.65.0 (or the 128.238.61.0) subnet in the \lstinline{tcpdump} output?
+    can you see the \lstinline{netspy} messages on the 128.238.65.0 subnet in the \lstinline{tcpdump} output?
 
     \item After terminating the \lstinline{netspy} program on \textit{h6},
-    can you see the \lstinline{netspy} messages on the 128.238.65.0 (or the 128.238.61.0) subnet?%
+    can you see the \lstinline{netspy} messages on the 128.238.65.0 subnet?%
     \footnote{If IGMPv1 is used, a participant does not send a leave message when it leaves the group.
     In this case, the membership record in the router expires in 120 seconds.
     During this interval, the router still forwards multicast datagram through the port.} 
@@ -601,13 +609,13 @@ telnet 128.238.63.101
     Keep \lstinline{netspy} running on hosts \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and \textit{h6} and server on \textit{h4} as described in \autoref{sec:multi-hub}.
     Try the following command in \textit{Router2}:
     \begin{lstlisting}[language={cisco}]
-mstat 128.238.62.100 128.238.61.100 224.111.111.111
+mstat 128.238.61.100 128.238.65.100 224.111.111.111
     \end{lstlisting}
 
     Generate multicast packet when execute command for specific source.
 
     \begin{report}
-    \item Draw multicast tree from 128.238.62.100 to 128.238.61.100 via 224.111.111.111 group.
+    \item Draw multicast tree from \textit{h0} (128.238.61.100) to \textit{h6} (128.238.65.100) via 224.111.111.111 group.
     \end{report}
 
 \section{Multicast TTL}
@@ -704,34 +712,34 @@ configure terminal
         \label{fig:7.15}
     \end{figure}
 
+     Enable PIM multicast routing in all the routers (see \autoref{sec:config-router}) if needed.
+%     \begin{lstlisting}[language={cisco}, emph={ethernet0_ip, ethernet1_ip}]
+% configure terminal
+%     ip multicast-routing
+%     interface f0/0
+%         ip address 128.238.61.1 255.255.255.0
+%         ip pim dense-mode
+%         no shutdown
+%         exit
+%     interface f0/1
+%         ip address 128.238.62.1 255.255.255.0
+%         ip pim dense-mode
+%         no shutdown
+%         exit
+%     end
+%     \end{lstlisting}
+
     You can use prepared topology as described in \autoref{sec:simple-multicast}.    
 
-    Open a \texttt{LXTerminal} in all hosts and add route for the hosts on the other side of router:
+    Open a \texttt{LXTerminal} in \textit{h0} and add multicast route:
     \begin{lstlisting}[emph={eth0}]
-route add -net 128.238.0.0/16 dev eth0
+route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
     \end{lstlisting}
 
     \begin{figure}[H]
         \centering
         \includegraphics[scale=2.0]{img/terminal}
     \end{figure}
-
-    Enable PIM multicast routing in all the routers (see \autoref{sec:config-router}). 
-    \begin{lstlisting}[language={cisco}, emph={ethernet0_ip, ethernet1_ip}]
-configure terminal
-    ip multicast-routing
-    interface f0/0
-        ip address 128.238.61.1 255.255.255.0
-        ip pim dense-mode
-        no shutdown
-        exit
-    interface f0/1
-        ip address 128.238.62.1 255.255.255.0
-        ip pim dense-mode
-        no shutdown
-        exit
-    end
-    \end{lstlisting}
 
 \section{** Multicast Real-Time Video}
     Start \lstinline{vlc} on \textit{h0} and \textit{h1}:
@@ -771,7 +779,7 @@ configure terminal
         \centering
         \includegraphics[scale=1.8]{img/stream2}
     \end{figure}
-    In the next window, specify the multicast group address to be {224.123.111.101}, with port number {22224}.
+    In the next window, specify the multicast group address to be {224.123.111.101}, with port number {2224}.
     click the \textit{Next} button.
     \begin{figure}[H]
         \centering
@@ -780,14 +788,14 @@ configure terminal
     click the \textit{Next} button again.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.7]{img/stream4}
+        \includegraphics[scale=1.8]{img/stream4}
     \end{figure}
     Then click the \textit{Stream} button.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.7]{img/stream5}
+        \includegraphics[scale=1.8]{img/stream5}
     \end{figure}
-    Now the \lstinline{vlc} on \textit{h0} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
+    Now the \lstinline{vlc} on \textit{h0} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {2224}. 
 
     On \textit{h1} \lstinline{vlc},
     go to the \textit{Media} menu and select \textit{Open Network Stream\ldots}.
